--- a/metascrape.html
+++ b/metascrape.html
@@ -19,4 +19,9 @@
   <h2>Meta</h2>
   <p>{{name}}</p>
   <p>{{description}}</p>
+  <ul>
+  {{#each images}}
+    <li><img src="{{this}}"/></li>
+  {{/each}}
+  </ul>
 </template>
